--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
   <head>
     <meta charset="utf-8">
     <title>Minecraft Backup Manager by LuqueDaniel</title>
-    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="styles.css">
+    <!-- Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Jacques+Francois' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-    <header>
-      <h1>Minecraft Backup Manager</h1>
-    </header>
+    <div id='wrap'>
 
-    <section id='information'>
-    </section>
+      <header>
+        <h1>Minecraft Backup Manager</h1>
+      </header>
 
-    <footer>
-    </footer>
+      <section id='information'>
+        <h3>Information</h3>
+        <p><b>Minecraft Backup Manager</b> is an open source application for managing Minecraft backups quickly and easily.</p>
+        <p><b>Last version:</b> 1.0(Dirt)</p>
+      </section>
+
+      <section id='download'>
+        <h3>Download</h3>
+        <a href='' title=''>Download<br />Windows .zip</a>
+        <a href='' title=''>Download<br />Linux .zip</a>
+        <a href='' title=''>Source</a>
+      </section>
+
+      <footer>
+      </footer>
+
+    </div>
   </body>
 </html>
