--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en_EN'>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <title>Minecraft Backup Manager by LuqueDaniel</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="styles.css">
+    <link rel='shortcut icon' href='images/favicon.ico' />
+    <link rel='stylesheet' href='styles.css' />
+    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Jacques+Francois' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Jacques+Francois' rel='stylesheet' type='text/css' />
   </head>
 
   <body>
@@ -17,20 +18,25 @@
         <h1>Minecraft Backup Manager</h1>
       </header>
 
+      <section id='img-box'>
+        <img id='image' src='images/interface.png' />
+      </section>
+
       <section id='information'>
         <h3>Information</h3>
         <p><b>Minecraft Backup Manager</b> is an open source application for managing Minecraft backups quickly and easily.</p>
-        <p><b>Last version:</b> 1.0(Dirt)</p>
+        <p><b>Last version:</b> 1.0 (Dirt)</p>
       </section>
 
       <section id='download'>
         <h3>Download</h3>
-        <a href='' title=''>Download<br />Windows .zip</a>
-        <a href='' title=''>Download<br />Linux .zip</a>
-        <a href='' title=''>Source</a>
+        <a href='packages/Minecraft_Backup_Manager_1.0_Windows.zip' title='Minecraft backup Manager for Windows' class='download_link'>Download<br />Windows (.zip)</a>
+        <a href='packages/minebackup_1.0_all.deb' title='Minecraft Backup Manager for Linux (.deb)' class='download_link'>Download<br />Linux (.deb)</a>
+        <a href='https://github.com/LuqueDaniel/Minecraft_backup' title='Github repository' class='download_link'>Source</a>
       </section>
 
       <footer>
+        Minecraft Backup Manager is a GPL project. Made by <a href='http://daniel.blogmatico.com' title='Blog of Daniel Luque'>Daniel Luque</a>
       </footer>
 
     </div>
