--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section id='information'>
         <h3>Information</h3>
         <p><b>Minecraft Backup Manager</b> is an open source application for managing Minecraft backups quickly and easily.</p>
-        <p><b>Last version:</b> 1.0 (Dirt)</p>
+        <p><b>Last version:</b> 1.1 (Stone)</p>
       </section>
 
       <section id='download'>
