New class .full-image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
 
       <section id='img-box'>
-        <img id='image' src='images/interface.png' />
+        <img class='full-image' src='images/interface.png' />
       </section>
 
       <section id='information'>
