Added previous versions

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href='packages/Minecraft_Backup_Manager_1.1_Windows.zip' title='Minecraft backup Manager for Windows' class='download_link'>Download<br />Windows (.zip)</a>
         <a href='packages/minebackup_1.1_all.deb' title='Minecraft Backup Manager for Linux (.deb)' class='download_link'>Download<br />Linux (.deb)</a>
         <a href='https://github.com/LuqueDaniel/Minecraft_backup' title='Github repository' class='download_link'>Source</a>
+        <a href='previous.html' title='Get a previous versions'>Previous versions</a>
       </section>
 
       <footer>
