Finished previous version page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
 
       <footer>
-        Minecraft Backup Manager is a GPL project. Made by <a href='http://daniel.blogmatico.com' title='Blog of Daniel Luque'>Daniel Luque</a>
+        Minecraft Backup Manager is a GPL project. Made by <a href='http://daniel.blogmatico.com' title='Blog Daniel Luque'>Daniel Luque.</a>
       </footer>
 
     </div>
